DS-565: Prevent shift content when sjip btn appears

--- a/docs-site/src/pages/pattern-lab/_patterns/50-pages/99999-bolt-dev-sandbox/styles/index.scss
+++ b/docs-site/src/pages/pattern-lab/_patterns/50-pages/99999-bolt-dev-sandbox/styles/index.scss
@@ -39,13 +39,16 @@
   z-index: -1;
 
   &:focus {
-    position: relative;
+    position: absolute;
+    top: var(--bolt-spacing-y-medium);
+    right: var(--bolt-spacing-x-medium);
     transform: translateY(0);
     z-index: 999;
   }
 }
 
 .c-quick-links__col-inner {
+  position: relative;
   height: 25vh;
   overflow: auto;
   padding: var(--bolt-spacing-y-medium) var(--bolt-spacing-x-medium);
